--- a/runtracker/runtracker/src/main/resources/application.properties
+++ b/runtracker/runtracker/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=Run Tracker
+
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/run_tracker
+spring.datasource.username=admin_runtracker
+spring.datasource.password=runtracker
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+# Server Configuration (Opsional)
+server.port=8080
