--- a/runtracker/pom.xml
+++ b/runtracker/pom.xml
@@ -77,6 +77,12 @@
     		<artifactId>postgresql</artifactId>
     		<scope>runtime</scope>
 		</dependency>
+		<dependency>
+    		<groupId>jakarta.servlet</groupId>
+    		<artifactId>jakarta.servlet-api</artifactId>
+    		<scope>provided</scope>
+		</dependency>
+
 
 	</dependencies>
 
