--- a/runtracker/src/main/resources/application.properties
+++ b/runtracker/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.show-sql=true
 
 # Server Configuration (Opsional)
 server.port=8080
+
+# restart projek
+spring.devtools.restart.enabled=true
+
