--- a/runtracker/src/main/resources/application.properties
+++ b/runtracker/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=Run Tracker
 
+spring.web.resources.static-locations=classpath:/static/
+
 # PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/run_tracker
 spring.datasource.username=admin_runtracker
