--- a/runtracker/src/main/resources/application.properties
+++ b/runtracker/src/main/resources/application.properties
@@ -2,6 +2,12 @@ spring.application.name=Run Tracker
 
 spring.web.resources.static-locations=classpath:/static/
 
+server.servlet.session.timeout=30m
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+
 # PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/run_tracker
 spring.datasource.username=admin_runtracker
