--- a/runtracker/src/main/resources/application.properties
+++ b/runtracker/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.datasource.username=admin_runtracker
 spring.datasource.password=runtracker
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 
 # Server Configuration (Opsional)
 server.port=8080
