--- a/runtracker/src/main/resources/application.properties
+++ b/runtracker/src/main/resources/application.properties
@@ -12,11 +12,7 @@ spring.thymeleaf.suffix=.html
 spring.datasource.url=jdbc:postgresql://localhost:5432/run_tracker
 spring.datasource.username=admin_runtracker
 spring.datasource.password=runtracker
-
-# JPA Configuration
-# spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-# spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Server Configuration (Opsional)
 server.port=8080
