--- a/runtracker/pom.xml
+++ b/runtracker/pom.xml
@@ -82,7 +82,11 @@
     		<artifactId>jakarta.servlet-api</artifactId>
     		<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+    		<groupId>com.zaxxer</groupId>
+    		<artifactId>HikariCP</artifactId>
+    		<version>5.0.1</version>
+		</dependency>
 
 	</dependencies>
 
