--- a/runtracker/src/main/resources/application.properties
+++ b/runtracker/src/main/resources/application.properties
@@ -20,3 +20,10 @@ server.port=8080
 # restart projek
 spring.devtools.restart.enabled=true
 
+# application.properties
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+
+file.upload-dir=src/main/resources/static/image/
+
+
